[package]
name = "shadowchain-runtime"
version = "0.1.0"
authors = ["Shadow Chain Team"]
edition = "2021"
license = "Apache-2.0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
smallvec = "1.11"

# Substrate primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-io = { workspace = true }
sp-genesis-builder = { workspace = true }

# Frame dependencies
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
frame-metadata-hash-extension = { workspace = true }

# Pallets
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Cumulus dependencies for parachain
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-weight-reclaim = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-aura = { workspace = true }
staging-parachain-info = { workspace = true }

# XCM dependencies
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }
polkadot-runtime-common = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
parachains-common = { workspace = true }
cumulus-primitives-utility = { workspace = true }
pallet-xcm = { workspace = true }
pallet-message-queue = { workspace = true }

# Additional pallets for parachain
pallet-collator-selection = { workspace = true }
pallet-session = { workspace = true }

# Local dependencies
pallet-shadow = { path = "../pallets/shadow", default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-io/std",
    "sp-genesis-builder/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-benchmarking?/std",
    "frame-benchmarking?/std",
    "frame-system-rpc-runtime-api/std",
    "frame-try-runtime?/std",
    "frame-metadata-hash-extension/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "cumulus-pallet-aura-ext/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-weight-reclaim/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-aura/std",
    "staging-parachain-info/std",
    "staging-xcm/std",
    "staging-xcm-builder/std",
    "staging-xcm-executor/std",
    "polkadot-runtime-common/std",
    "polkadot-parachain-primitives/std",
    "parachains-common/std",
    "cumulus-primitives-utility/std",
    "pallet-xcm/std",
    "pallet-message-queue/std",
    "pallet-collator-selection/std",
    "pallet-session/std",
    "pallet-shadow/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "cumulus-pallet-parachain-system/runtime-benchmarks",
    "cumulus-pallet-weight-reclaim/runtime-benchmarks",
    "cumulus-pallet-xcmp-queue/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "pallet-message-queue/runtime-benchmarks",
    "pallet-collator-selection/runtime-benchmarks",
    "pallet-shadow/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-executive/try-runtime",
    "frame-try-runtime/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "cumulus-pallet-aura-ext/try-runtime",
    "cumulus-pallet-parachain-system/try-runtime",
    "cumulus-pallet-weight-reclaim/try-runtime",
    "cumulus-pallet-xcm/try-runtime",
    "cumulus-pallet-xcmp-queue/try-runtime",
    "staging-parachain-info/try-runtime",
    "pallet-xcm/try-runtime",
    "pallet-message-queue/try-runtime",
    "pallet-collator-selection/try-runtime",
    "pallet-session/try-runtime",
    "pallet-shadow/try-runtime",
    "sp-runtime/try-runtime",
]