[package]
name = "pallet-shadow"
version = "0.1.0"
authors = ["Shadow Chain Team"]
edition = "2021"
license = "MIT-0"
publish = false
description = "A pallet for storing encrypted Web2 activity metadata on-chain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
polkadot-sdk = { workspace = true, default-features = false, features = ["frame-benchmarking", "frame-support", "frame-system", "sp-core", "sp-io", "sp-std"] }

[dev-dependencies]
sp-runtime = { workspace = true }
polkadot-sdk = { workspace = true, features = ["pallet-balances", "pallet-timestamp"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame/std",
    "sp-runtime/std",
    "polkadot-sdk/std",
]
runtime-benchmarks = [
    "frame/runtime-benchmarks",
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
    "frame/try-runtime",
    "polkadot-sdk/try-runtime",
]